//
// PROJECT:         Aspia
// FILE:            protocol/computer.proto
// LICENSE:         GNU Lesser General Public License 2.1
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

import "authorization.proto";
import "desktop_session.proto";

package aspia.proto;

message Computer
{
    string name                           = 1;
    string comment                        = 2;
    string address                        = 3;
    uint32 port                           = 4;
    string username                       = 5;
    string password                       = 6;
    auth.SessionType session_type         = 7;
    desktop.Config desktop_manage_session = 8;
    desktop.Config desktop_view_session   = 9;
}
